Security/cert-manager/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress
  namespace: expensy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - expensy.ironhack.com   
      secretName: expensy-tls
  rules:
    - host: expensy.ironhack.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expensy-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: expensy-backend
                port:
                  number: 5000
